Change 'unRAID' to 'Unraid' to match new branding. Updated a few copyright strings.

--- a/plugins/dynamix/default.cfg
+++ b/plugins/dynamix/default.cfg
@@ -52,7 +52,7 @@ status=""
 root=""
 RcptTo=""
 SetEmailPriority="True"
-Subject="unRAID Status: "
+Subject="Unraid Status: "
 server="smtp.gmail.com"
 port="465"
 UseTLS="YES"
